--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Animal For Fun</string>
+    <string name="tittle">ภาพต่อไปนี้เป็นเงาของสัตว์ชนิดใด</string>
 </resources>
